places-sidebar: disconnect volume monitor signals on dispose

The GIO volume monitor can survive the sidebar, so we need to disconnect
its signals handlers on dispose.

https://bugzilla.gnome.org/show_bug.cgi?id=652320